@@ -1,3 +1,9 @@
+2020-05-19 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/include/iso646.h,
+	  support/regression/tests/iso646.c:
+	  Fix compl macro.
+
 2020-05-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCCicode.c: Fix bug #2827
